force-app/main/default/objects/Account/fields/Net_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Net_Payment_Terms__c</fullName>
    <label>Net Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Net 15</fullName>
            </value>
            <value>
                <fullName>Net 30</fullName>
            </value>
            <value>
                <fullName>Net 45</fullName>
            </value>
            <value>
                <fullName>Net 55</fullName>
            </value>
            <value>
                <fullName>Net 60</fullName>
            </value>
            <value>
                <fullName>1/2 = 30, 1/2 = 90</fullName>
            </value>
            <value>
                <fullName>Net 90</fullName>
            </value>
            <value>
                <fullName>Due On Receipt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>