force-app/main/default/objects/Account/fields/NetMargin__c.field-meta.xml
<CustomField>
    <fullName>NetMargin__c</fullName>
    <label>NetMargin</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>