force-app/main/default/objects/Account/fields/Open_Job_Cnt__c.field-meta.xml
<CustomField>
    <fullName>Open_Job_Cnt__c</fullName>
    <label>Open Job Cnt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>