force-app/main/default/objects/Account/fields/Parent_Approved_Credit__c.field-meta.xml
<CustomField>
    <fullName>Parent_Approved_Credit__c</fullName>
    <formula>Parent.Approved_Credit_Limit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Approved Credit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>