force-app/main/default/objects/Account/fields/Patient_Volume__c.field-meta.xml
<CustomField>
    <fullName>Patient_Volume__c</fullName>
    <description>Tracking patient load or service scale</description>
    <label>Patient Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>