force-app/main/default/objects/Account/fields/PCR_Status__c.field-meta.xml
<CustomField>
    <fullName>PCR_Status__c</fullName>
    <label>PCR Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>