force-app/main/default/objects/Account/fields/Perm_Fees__c.field-meta.xml
<CustomField>
    <fullName>Perm_Fees__c</fullName>
    <label>Perm Fees</label>
    <length>255</length>
    <type>Text</type>
</CustomField>