force-app/main/default/objects/Account/fields/Perm_Guarantee_Period__c.field-meta.xml
<CustomField>
    <fullName>Perm_Guarantee_Period__c</fullName>
    <label>Perm Guarantee Period</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>120 days</fullName>
            </value>
            <value>
                <fullName>120 days pro-rated</fullName>
            </value>
            <value>
                <fullName>30 days</fullName>
            </value>
            <value>
                <fullName>60 days</fullName>
            </value>
            <value>
                <fullName>60 days pro-rated</fullName>
            </value>
            <value>
                <fullName>90 days</fullName>
            </value>
            <value>
                <fullName>90 days pro-rated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>