force-app/main/default/objects/Account/fields/Perm_Nursing_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Perm_Nursing_Agreement__c</fullName>
    <label>Perm Nursing Agreement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>