force-app/main/default/objects/Account/fields/Perm_Recruiter__c.field-meta.xml
<CustomField>
    <fullName>Perm_Recruiter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Perm Recruiter</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Clients9</relationshipName>
    <type>Lookup</type>
</CustomField>