force-app/main/default/objects/Account/fields/Perm_VMS_Fee__c.field-meta.xml
<CustomField>
    <fullName>Perm_VMS_Fee__c</fullName>
    <label>Perm VMS Fee%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>