force-app/main/default/objects/Account/fields/Placement_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Placement_Percentage__c</fullName>
    <label>Placement Percentage</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>