force-app/main/default/objects/Account/fields/Posting_Protocol__c.field-meta.xml
<CustomField>
    <fullName>Posting_Protocol__c</fullName>
    <label>Posting Protocol</label>
    <length>255</length>
    <type>Text</type>
</CustomField>