force-app/main/default/objects/Account/fields/Project_Template__c.field-meta.xml
<CustomField>
    <fullName>Project_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Template</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Clients</relationshipLabel>
    <relationshipName>Clients</relationshipName>
    <type>Lookup</type>
</CustomField>