force-app/main/default/objects/Account/fields/Prompt_Pay_Discount__c.field-meta.xml
<CustomField>
    <fullName>Prompt_Pay_Discount__c</fullName>
    <label>Prompt Pay Discount %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>