force-app/main/default/objects/Account/fields/QB_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>QB_Account_Name__c</fullName>
    <label>QB Account Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>