force-app/main/default/objects/Account/fields/QB_Tax_Code__c.field-meta.xml
<CustomField>
    <fullName>QB_Tax_Code__c</fullName>
    <label>QB Tax Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Test</fullName>
            </value>
            <value>
                <fullName>DC - Sales Tax - Perm - 6.0%</fullName>
            </value>
            <value>
                <fullName>PA - Allegheny Sales Tax 7%</fullName>
            </value>
            <value>
                <fullName>PA - Philly Sales Tax 8%</fullName>
            </value>
            <value>
                <fullName>PA - Sales Tax 6%</fullName>
            </value>
            <value>
                <fullName>Sales Tax - CT - 6.35%</fullName>
            </value>
            <value>
                <fullName>Sales Tax - CT - EXEMPT</fullName>
            </value>
            <value>
                <fullName>Sales Tax - HI - 4.5%</fullName>
            </value>
            <value>
                <fullName>Sales Tax - HI - 4%</fullName>
            </value>
            <value>
                <fullName>Sales Tax - IA - 7%</fullName>
            </value>
            <value>
                <fullName>Sales Tax - NM - 6.8125%</fullName>
            </value>
            <value>
                <fullName>Sales Tax - NM - 7.25%</fullName>
            </value>
            <value>
                <fullName>Sales Tax - NM - 7.2500%</fullName>
            </value>
            <value>
                <fullName>Sales Tax - NM - 7.3125%</fullName>
            </value>
            <value>
                <fullName>Sales Tax - NM - 7.4375%</fullName>
            </value>
            <value>
                <fullName>Sales Tax - NM - 7.53%</fullName>
            </value>
            <value>
                <fullName>Sales Tax - NM - 7.625%</fullName>
            </value>
            <value>
                <fullName>Sales Tax - NM - 7.8125%</fullName>
            </value>
            <value>
                <fullName>Sales Tax - NM - 7.8333%</fullName>
            </value>
            <value>
                <fullName>Sales Tax - NM - 7.8750%</fullName>
            </value>
            <value>
                <fullName>Sales Tax - NM - 7.8958%</fullName>
            </value>
            <value>
                <fullName>Sales Tax - NM - 8.0000%</fullName>
            </value>
            <value>
                <fullName>Sales Tax - NM - 8.1250%</fullName>
            </value>
            <value>
                <fullName>Sales Tax - NM - 8.1875%</fullName>
            </value>
            <value>
                <fullName>Sales Tax - NM - 8.2500%</fullName>
            </value>
            <value>
                <fullName>Sales Tax - NM - 8.3125%</fullName>
            </value>
            <value>
                <fullName>Sales Tax - NM - 8.3750%</fullName>
            </value>
            <value>
                <fullName>Sales Tax - NM - 8.4375%</fullName>
            </value>
            <value>
                <fullName>Sales Tax - NM - 8.5083%</fullName>
            </value>
            <value>
                <fullName>Sales Tax - NM - 8.9375%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>