force-app/main/default/objects/Account/fields/Radius_Stipulation__c.field-meta.xml
<CustomField>
    <fullName>Radius_Stipulation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Radius Stipulation</label>
    <type>Checkbox</type>
</CustomField>