force-app/main/default/objects/Account/fields/Rate_Modifiers__c.field-meta.xml
<CustomField>
    <fullName>Rate_Modifiers__c</fullName>
    <label>Rate Modifiers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>