force-app/main/default/objects/Account/fields/Recruiter__c.field-meta.xml
<CustomField>
    <fullName>Recruiter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Recruiter/s in case of deault recruiters at account level (Based on the Industry and type)</description>
    <label>Recruiter</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Recruiter)</relationshipLabel>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>