force-app/main/default/objects/Account/fields/Recruiting_Assistant__c.field-meta.xml
<CustomField>
    <fullName>Recruiting_Assistant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recruiting Assistant</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ClientsLv1X</relationshipName>
    <type>Lookup</type>
</CustomField>