force-app/main/default/objects/Account/fields/Regulatory_License_Number__c.field-meta.xml
<CustomField>
    <fullName>Regulatory_License_Number__c</fullName>
    <description>Field for licenses required for client facilities/providers</description>
    <label>Regulatory License Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>