force-app/main/default/objects/Account/fields/Responsible_for_Distribution_List__c.field-meta.xml
<CustomField>
    <fullName>Responsible_for_Distribution_List__c</fullName>
    <label>Responsible for Distribution List</label>
    <type>TextArea</type>
</CustomField>