force-app/main/default/objects/Account/fields/Safety_Rating__c.field-meta.xml
<CustomField>
    <fullName>Safety_Rating__c</fullName>
    <description>Safety compliance rating</description>
    <label>Safety Rating</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>