force-app/main/default/objects/Account/fields/Sales_Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Sales_Opportunity_Name__c</fullName>
    <label>Sales Opportunity Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>