force-app/main/default/objects/Account/fields/Sales_Opportunity_Owner__c.field-meta.xml
<CustomField>
    <fullName>Sales_Opportunity_Owner__c</fullName>
    <label>Sales Opportunity Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>