force-app/main/default/objects/Account/fields/Sales_Opportunity_Won_Date__c.field-meta.xml
<CustomField>
    <fullName>Sales_Opportunity_Won_Date__c</fullName>
    <label>Sales Opportunity Won Date</label>
    <type>Date</type>
</CustomField>