force-app/main/default/objects/Account/fields/Sales_Opprtunity_Stage__c.field-meta.xml
<CustomField>
    <fullName>Sales_Opprtunity_Stage__c</fullName>
    <label>Sales Opprtunity Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>