force-app/main/default/objects/Account/fields/Sales_Tax_Pass_Thru_Perm__c.field-meta.xml
<CustomField>
    <fullName>Sales_Tax_Pass_Thru_Perm__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sales Tax Pass Thru Perm</label>
    <type>Checkbox</type>
</CustomField>