force-app/main/default/objects/Account/fields/Send_Timesheet__c.field-meta.xml
<CustomField>
    <fullName>Send_Timesheet__c</fullName>
    <label>Send Timesheet</label>
    <type>TextArea</type>
</CustomField>