force-app/main/default/objects/Account/fields/Setting__c.field-meta.xml
<CustomField>
    <fullName>Setting__c</fullName>
    <label>Setting</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Acute Care Hospital</fullName>
            </value>
            <value>
                <fullName>Addiction Treatment Center</fullName>
            </value>
            <value>
                <fullName>Aquatic Therapy</fullName>
            </value>
            <value>
                <fullName>Assisted Living Facility</fullName>
            </value>
            <value>
                <fullName>Behavioral Health</fullName>
            </value>
            <value>
                <fullName>Camp</fullName>
            </value>
            <value>
                <fullName>Charter School</fullName>
            </value>
            <value>
                <fullName>Clinic</fullName>
            </value>
            <value>
                <fullName>Correctional</fullName>
            </value>
            <value>
                <fullName>Critical Illness Recovery Hospital</fullName>
            </value>
            <value>
                <fullName>Dialysis</fullName>
            </value>
            <value>
                <fullName>Family Practice</fullName>
            </value>
            <value>
                <fullName>Gymnastics</fullName>
            </value>
            <value>
                <fullName>Health Plan</fullName>
            </value>
            <value>
                <fullName>Home Health</fullName>
            </value>
            <value>
                <fullName>Hospice</fullName>
            </value>
            <value>
                <fullName>Imaging</fullName>
            </value>
            <value>
                <fullName>Laboratory</fullName>
            </value>
            <value>
                <fullName>Long Term Acute Care Hospital</fullName>
            </value>
            <value>
                <fullName>Managed Care</fullName>
            </value>
            <value>
                <fullName>Mobile Health</fullName>
            </value>
            <value>
                <fullName>Outpatient</fullName>
            </value>
            <value>
                <fullName>Outpatient - Ortho</fullName>
            </value>
            <value>
                <fullName>Outpatient - Private Practice</fullName>
            </value>
            <value>
                <fullName>Outpatient - Sports</fullName>
            </value>
            <value>
                <fullName>Pediatrics</fullName>
            </value>
            <value>
                <fullName>Rehabilitation Hospital</fullName>
            </value>
            <value>
                <fullName>Schools</fullName>
            </value>
            <value>
                <fullName>SNF / LTC</fullName>
            </value>
            <value>
                <fullName>Sub Acute Rehab</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>