force-app/main/default/objects/Account/fields/Shift_Differentials_Apply__c.field-meta.xml
<CustomField>
    <fullName>Shift_Differentials_Apply__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shift Differentials Apply</label>
    <type>Checkbox</type>
</CustomField>