force-app/main/default/objects/Account/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Account Status(Active, Prospect or Inactive) as per the requirement</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Bid Loss</fullName>
            </value>
            <value>
                <fullName>Bid Won</fullName>
            </value>
            <value>
                <fullName>Contract Sent</fullName>
            </value>
            <value>
                <fullName>Full Executed Contract</fullName>
            </value>
            <value>
                <fullName>Fully Executed Contract</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Moved to a Different MSP</fullName>
            </value>
            <value>
                <fullName>N / A</fullName>
            </value>
            <value>
                <fullName>Negotiating Terms</fullName>
            </value>
            <value>
                <fullName>New Bid</fullName>
            </value>
            <value>
                <fullName>No longer working with</fullName>
            </value>
            <value>
                <fullName>Not At This Time</fullName>
            </value>
            <value>
                <fullName>Not Pursuing</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Sub Vendor Prospect</fullName>
            </value>
            <value>
                <fullName>Verifying MSP</fullName>
            </value>
            <value>
                <fullName>Win Back</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>