force-app/main/default/objects/Account/fields/Submission_Protocol_Perm__c.field-meta.xml
<CustomField>
    <fullName>Submission_Protocol_Perm__c</fullName>
    <label>Submission Protocol Perm</label>
    <type>TextArea</type>
</CustomField>