force-app/main/default/objects/Account/fields/Submission_Protocol_Temp__c.field-meta.xml
<CustomField>
    <fullName>Submission_Protocol_Temp__c</fullName>
    <label>Submission Protocol Temp</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>