force-app/main/default/objects/Account/fields/Submission_Website_Perm__c.field-meta.xml
<CustomField>
    <fullName>Submission_Website_Perm__c</fullName>
    <label>Submission Website Perm</label>
    <type>Url</type>
</CustomField>