force-app/main/default/objects/Account/fields/Submission_Website_Temp__c.field-meta.xml
<CustomField>
    <fullName>Submission_Website_Temp__c</fullName>
    <label>Submission Website Temp</label>
    <type>Url</type>
</CustomField>