force-app/main/default/objects/Account/fields/Symbol__c.field-meta.xml
<CustomField>
    <fullName>Symbol__c</fullName>
    <label>Symbol</label>
    <length>50</length>
    <type>Text</type>
</CustomField>