force-app/main/default/objects/Account/fields/Tax_ID_number__c.field-meta.xml
<CustomField>
    <fullName>Tax_ID_number__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Tax ID number</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>