force-app/main/default/objects/Account/fields/Temp_Allied_Recruiter__c.field-meta.xml
<CustomField>
    <fullName>Temp_Allied_Recruiter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Temp Allied Recruiter</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ClientsexDh</relationshipName>
    <type>Lookup</type>
</CustomField>