force-app/main/default/objects/Account/fields/Temp_Nursing_Recruiter__c.field-meta.xml
<CustomField>
    <fullName>Temp_Nursing_Recruiter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Temp Nursing Recruiter</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ClientseZf1</relationshipName>
    <type>Lookup</type>
</CustomField>