force-app/main/default/objects/Account/fields/Templates_Require_Review__c.field-meta.xml
<CustomField>
    <fullName>Templates_Require_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Templates Require Review</label>
    <type>Checkbox</type>
</CustomField>