force-app/main/default/objects/Account/fields/Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Time_Zone__c</fullName>
    <label>Time Zone</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>-CST</fullName>
            </value>
            <value>
                <fullName>-EST</fullName>
            </value>
            <value>
                <fullName>-GMT</fullName>
            </value>
            <value>
                <fullName>-MST</fullName>
            </value>
            <value>
                <fullName>-PST</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>