force-app/main/default/objects/Account/fields/Timesheet_Approver_1__c.field-meta.xml
<CustomField>
    <fullName>Timesheet_Approver_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Timesheet Approver 1</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Clients (Timesheet Approver 1)</relationshipLabel>
    <relationshipName>Clients2</relationshipName>
    <type>Lookup</type>
</CustomField>