force-app/main/default/objects/Account/fields/Timesheet_Approver_2__c.field-meta.xml
<CustomField>
    <fullName>Timesheet_Approver_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Timesheet Approver 2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Clients (Timesheet Approver 2)</relationshipLabel>
    <relationshipName>Clients3</relationshipName>
    <type>Lookup</type>
</CustomField>