force-app/main/default/objects/Account/fields/Timesheet_Approver__c.field-meta.xml
<CustomField>
    <fullName>Timesheet_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Timesheet Approver</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Clients (Timesheet Approver)</relationshipLabel>
    <relationshipName>Clients1</relationshipName>
    <type>Lookup</type>
</CustomField>