force-app/main/default/objects/Account/fields/Timesheet_Notes__c.field-meta.xml
<CustomField>
    <fullName>Timesheet_Notes__c</fullName>
    <label>Timesheet Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>