force-app/main/default/objects/Account/fields/Timezone__c.field-meta.xml
<CustomField>
    <fullName>Timezone__c</fullName>
    <description>Timezone that account belongs to/preferred to work</description>
    <label>Timezone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PST</fullName>
            </value>
            <value>
                <fullName>EST</fullName>
            </value>
            <value>
                <fullName>CST</fullName>
            </value>
            <value>
                <fullName>MDT</fullName>
            </value>
            <value>
                <fullName>IST</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>