force-app/main/default/objects/Account/fields/Verify_Payment_Advice__c.field-meta.xml
<CustomField>
    <fullName>Verify_Payment_Advice__c</fullName>
    <label>Verify Payment Advice</label>
    <type>TextArea</type>
</CustomField>