force-app/main/default/objects/Account/fields/Verify_VMS_Hours__c.field-meta.xml
<CustomField>
    <fullName>Verify_VMS_Hours__c</fullName>
    <label>Verify VMS Hours</label>
    <type>TextArea</type>
</CustomField>