force-app/main/default/objects/Account/fields/Work_Week__c.field-meta.xml
<CustomField>
    <fullName>Work_Week__c</fullName>
    <label>Work Week</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Test</fullName>
            </value>
            <value>
                <fullName>SunSat</fullName>
            </value>
            <value>
                <fullName>MonSun</fullName>
            </value>
            <value>
                <fullName>TueMon</fullName>
            </value>
            <value>
                <fullName>WedTue</fullName>
            </value>
            <value>
                <fullName>ThuWed</fullName>
            </value>
            <value>
                <fullName>FriThu</fullName>
            </value>
            <value>
                <fullName>SatFri</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>