force-app/main/default/objects/Account/fields/Workweek__c.field-meta.xml
<CustomField>
    <fullName>Workweek__c</fullName>
    <description>Preferred work week</description>
    <label>Workweek</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sat - Sun</fullName>
            </value>
            <value>
                <fullName>Sun - Sat</fullName>
            </value>
            <value>
                <fullName>Mon - Sun</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>