force-app/main/default/objects/Account/recordTypes/Healthcare_Hospital.recordType-meta.xml
<RecordType>
    <fullName>Healthcare_Hospital</fullName>
    <active>true</active>
    <label>Healthcare Hospital</label>
</RecordType>