force-app/main/default/objects/Account/recordTypes/MSP_VMS.recordType-meta.xml
<RecordType>
    <fullName>MSP_VMS</fullName>
    <active>true</active>
    <label>MSP/VMS</label>
</RecordType>