force-app/main/default/objects/Account/validationRules/Candidate_Pool_Account_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Candidate_Pool_Account_Name</fullName>
    <active>true</active>
    <description>If the name previously had “Candidate Pool” in it and the name is now being changed. Throw an validation message</description>
    <errorConditionFormula>IF( CONTAINS(UPPER(PRIORVALUE(Name)),&quot;CANDIDATE POOL&quot;) &amp;&amp; PRIORVALUE(Name) != Name, TRUE,FALSE)</errorConditionFormula>
    <errorMessage>Account Name cannot be modified</errorMessage>
</ValidationRule>